--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=f718e50f3aba043d493e3b9c57238fac93be5b7eab7677ba33d23
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.platform=postgres
+spring.jpa.show-sql=true
